// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavLinks /> renders properly 1`] = `
<div>
  <ul
    class="jsx-2853090894 "
  >
    <li
      class="jsx-2853090894"
    >
      <a
        class="jsx-2853090894 fontS"
        href="/pt/about"
      >
        Sobre
      </a>
    </li>
    <li
      class="jsx-2853090894"
    >
      <a
        class="jsx-2853090894 fontS"
        href="/pt/projects"
      >
        Projetos
      </a>
    </li>
    <li
      class="jsx-2853090894"
    >
      <a
        class="jsx-2853090894 fontS active"
        href="/pt/services"
      >
        Serviços
      </a>
    </li>
    <li
      class="jsx-2853090894"
    >
      <a
        class="jsx-2853090894 fontS"
        href="/pt/contact"
      >
        Contacto
      </a>
    </li>
    <li
      class="jsx-2853090894 languageButton fontXXS"
    >
      <button
        class="jsx-2866958827"
        type="button"
      >
        pt
      </button>
    </li>
  </ul>
</div>
`;

exports[`<NavLinks /> renders properly in mobile 1`] = `
<div>
  <ul
    class="jsx-2853090894 mobileLayout"
  >
    <li
      class="jsx-2853090894"
    >
      <a
        class="jsx-2853090894 fontS"
        href="/pt/about"
      >
        Sobre
      </a>
    </li>
    <li
      class="jsx-2853090894"
    >
      <a
        class="jsx-2853090894 fontS"
        href="/pt/projects"
      >
        Projetos
      </a>
    </li>
    <li
      class="jsx-2853090894"
    >
      <a
        class="jsx-2853090894 fontS active"
        href="/pt/services"
      >
        Serviços
      </a>
    </li>
    <li
      class="jsx-2853090894"
    >
      <a
        class="jsx-2853090894 fontS"
        href="/pt/contact"
      >
        Contacto
      </a>
    </li>
    <li
      class="jsx-2853090894 languageButton fontXXS white fontXS"
    >
      <button
        class="jsx-2866958827"
        type="button"
      >
        pt
      </button>
    </li>
  </ul>
</div>
`;

exports[`<NavLinks /> renders properly when language is en 1`] = `
<div>
  <ul
    class="jsx-2853090894 "
  >
    <li
      class="jsx-2853090894"
    >
      <a
        class="jsx-2853090894 fontS"
        href="/en/about"
      >
        About
      </a>
    </li>
    <li
      class="jsx-2853090894"
    >
      <a
        class="jsx-2853090894 fontS"
        href="/en/projects"
      >
        Projects
      </a>
    </li>
    <li
      class="jsx-2853090894"
    >
      <a
        class="jsx-2853090894 fontS active"
        href="/en/services"
      >
        Services
      </a>
    </li>
    <li
      class="jsx-2853090894"
    >
      <a
        class="jsx-2853090894 fontS"
        href="/en/contact"
      >
        Contact
      </a>
    </li>
    <li
      class="jsx-2853090894 languageButton fontXXS"
    >
      <button
        class="jsx-2866958827"
        type="button"
      >
        pt
      </button>
    </li>
  </ul>
</div>
`;

exports[`<NavLinks /> renders properly when the menu is open 1`] = `
<div>
  <ul
    class="jsx-2853090894 mobileLayout menuOpen"
  >
    <li
      class="jsx-2853090894"
    >
      <a
        class="jsx-2853090894 fontS"
        href="/pt/about"
      >
        Sobre
      </a>
    </li>
    <li
      class="jsx-2853090894"
    >
      <a
        class="jsx-2853090894 fontS"
        href="/pt/projects"
      >
        Projetos
      </a>
    </li>
    <li
      class="jsx-2853090894"
    >
      <a
        class="jsx-2853090894 fontS active"
        href="/pt/services"
      >
        Serviços
      </a>
    </li>
    <li
      class="jsx-2853090894"
    >
      <a
        class="jsx-2853090894 fontS"
        href="/pt/contact"
      >
        Contacto
      </a>
    </li>
    <li
      class="jsx-2853090894 languageButton fontXXS white fontXS"
    >
      <button
        class="jsx-2866958827"
        type="button"
      >
        pt
      </button>
    </li>
  </ul>
</div>
`;
